--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,32 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import net.meilcli.pipe.gradle.dependencies.*
+
 buildscript {
-    ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
+        maven { url Repositories.gradle }
+        def githubUser = System.getenv("GITHUB_USER")
+        def githubToken = System.getenv("GITHUB_TOKEN")
+        if (githubUser != null && githubToken != null) {
+            maven {
+                url "https://maven.pkg.github.com/MeilCli/Librarian"
+                credentials {
+                    username githubUser
+                    password githubToken
+                }
+            }
+        } else {
+            maven { url Repositories.librarian }
+        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath Android.gradle
+        classpath Kotlin.gradle
+        classpath Bintray.plugin
+        classpath Detekt.gradle
+        classpath Librarian.pluginCore
+        classpath Librarian.pluginPreset
+        classpath Gmazzo.gradleBuildConfigPlugin
     }
 }
 
@@ -18,6 +34,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url Repositories.gradle }
+        maven { url Repositories.retekt }
     }
 }
 
