--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,3 +4,8 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'AndroidApplicationPlugin' // this is define at buildSrc
 apply plugin: 'io.gitlab.arturbosch.detekt'
 apply plugin: 'DetektConfigPlugin' // this is define at buildSrc
+
+dependencies {
+    implementation project(':pipe-core')
+    implementation project(':pipe-adapter')
+}
