add take and skip pipe

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".scenes.color.ColorSceneActivity" />
+        <activity android:name=".scenes.insert.InsertSceneActivity" />
     </application>
 
 </manifest>
