--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".scenes.color.ColorSceneActivity" />
         <activity android:name=".scenes.insert.InsertSceneActivity" />
+        <activity android:name=".scenes.every.EverySceneActivity" />
     </application>
 
 </manifest>
